# anymate

./: .env.example  .gitignore  db.sqlite3  main.py  manage.py  pyproject.toml
automation/: db_filter.py  models.py  routers.py  serializers.py  urls.py  utils.py  views.py
facebook/: apps.py  routes.py  urls.py
saas/: admin.py  apps.py  context_processors.py  dacorator.py  filters.py  models.py  protected_rest_views.py  protected_serializers.py  rest_views.py  routes.py  serializers.py  signals.py  urls.py  utils.py  views.py
saas/management/commands/: seed_services.py  seed_subscriptions.py  seed_users.py
saas/templatetags/: group_tags.py
store/: admin.py  apps.py  models.py  permissions.py  protected_serializers.py  routes.py  serializers.py  urls.py  views.py
store/templates/pages/dashboard/services/store/: collections.html  index.html
templates/core/: base.html  base_dashboard.html  navbar.html
templates/pages/auth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
templates/pages/dashboard/: index.html  service_requests.html
theme/static_src/src/: styles.css
ui/: urls.py  views.py
ui/management/commands/: startapp.py
xanymate/: asgi.py  permissions.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
xanymate/mixins/: __init__.py
